icons added & word-wrap fixed

--- a/front-end/my-app/src/app/chat/chat-left-panel/chat-left-panel.component.scss
+++ b/front-end/my-app/src/app/chat/chat-left-panel/chat-left-panel.component.scss
@@ -46,6 +46,23 @@ mat-nav-list a {
     border: 1px solid rgb(0, 0, 0);
 }
 
+.chatName {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 150px;
+    line-height: 1;
+}
+
+.unreadCount {
+    border-radius: 50%;
+    text-align: center;
+    font-size: medium;
+    position: absolute;
+    right: 3px;
+    bottom: 19px;
+}
+
 .chat {
     height: 60px;
     display: flex;
